testing/tests/melt/negative/lvalues_2.c

int main() 
{
    "2" = "3"; // String literals are not lvalues
    return 0;
}
